# swc-slack

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  tox.ini
.github/workflows/: test_and_deploy.yml
docs/source/: api_index.rst  conf.py  index.rst
scripts/: message_image_analysis_attendees.py  message_multi_course_attendees.py
swc_slack/: __init__.py  users.py  utils.py
swc_slack/messaging/: read.py  write.py
