[project]
name = "swc-slack"
authors = [{name = "Adam Tyson", email= "code@adamltyson.com"}]
description = "Tools to interface with slack"
readme = "README.md"
requires-python = ">=3.8.0"
dynamic = ["version"]

dependencies = [
    "slack-sdk",
]

license = {text = "BSD-3-Clause"}

classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: BSD License",
]

[project.urls]
homepage = "https://github.com/neuroinformatics-unit/swc-slack"
bug_tracker = "https://github.com/neuroinformatics-unit/swc-slack/issues"
documentation = "https://neuroinformatics-unit.github.io/swc-slack"

source_code = "https://github.com/neuroinformatics-unit/swc-slack"
user_support = "https://github.com/neuroinformatics-unit/swc-slack/issues"

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
  "coverage",
  "tox",
  "black",
  "mypy",
  "pre-commit",
  "ruff",
  "setuptools_scm",
]

[build-system]
requires = [
    "setuptools>=45",
    "wheel",
    "setuptools_scm[toml]>=6.2",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["swc_slack*"]
exclude = ["tests", "docs*"]


[tool.pytest.ini_options]
addopts = "--cov=swc_slack"

[tool.black]
target-version = ['py38', 'py39', 'py310']
skip-string-normalization = false
line-length = 79

[tool.setuptools_scm]

[tool.check-manifest]
ignore = [
  ".yaml",
  "tox.ini",
  "tests/",
  "tests/test_unit/",
  "tests/test_integration/",
  "docs/",
  "docs/source/",
]


[tool.ruff]
line-length = 79
exclude = ["__init__.py","build",".eggs"]
select = ["I", "E", "F"]
fix = true

[tool.cibuildwheel]
build = "cp38-* cp39-* cp310-*"

[tool.cibuildwheel.macos]
archs = ["x86_64", "arm64"]
